break all text to avoid overlapping screen

--- a/src/client/pages/block/components/graph/graph.css
+++ b/src/client/pages/block/components/graph/graph.css
@@ -28,6 +28,7 @@
     gap: .25rem;
     flex-direction: column;
     min-height: 1.5rem;
+    word-break: break-all;
 }
 
 .xe-block-graph-dag {
